--- a/index.html
+++ b/index.html
@@ -22,11 +22,26 @@
     <main>
         <div class="main__text">
             <div class="main__text--heading">Your contributions were awesome!</div>
-            <div class="main__text--paragraph">Hey {name}, we all here at OpenMRS loved your contributions. We are really grateful that you took out time to contribute and help us develop a great Open Source Community. Without participant like you, we wouldn't have grown this far and the whole Open Source Community wouldn't have been so enriched. We hope you keep your contribution awesomeness coming in :)</div>
+            <div class="main__text--paragraph">Hey {name}, we all here at OpenMRS loved your contributions. We are really grateful that you took out time to contribute and help us develop a great Open Source Community. Without participant like you, we wouldn't have grown this far and the whole Open Source Community wouldn't have been so enriched. We hope you keep your contribution awesomeness coming in :)
+            </div>
             <div class="main__text--certificate">You can collect your digital certificate by clicking on the button below</div>
             <a href="#" class="btn">Download Now</a>
             <div class="main__text--regards">Best Wishes from OpenMRS</div>
         </div>
     </main>
+
+    <footer>
+        <ul class="footer-links">
+            <li class="footer-link">
+                <a href="https://openmrs.org/">OpenMRS</a>
+            </li>
+            <li class="footer-link">
+                <a href="https://talk.openmrs.org/">Forum</a>
+            </li>
+            <li class="footer-link">
+                <a href="https://wiki.openmrs.org/display/IRC/Home">Chatroom</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
