--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="brand-logo">
             <img src="assets/img/logo.jpg" alt="" class="logo">
         </div>
-        <div class="brand-title">OpenMRS</div>
-        <div class="subject">Thank you for working together with OpenMRS</div>
+        <!-- <div class="brand-title">OpenMRS</div> -->
+        <div class="subject">Thank you for working together with us</div>
     </header>
 
     <main>
@@ -24,6 +24,7 @@
             <div class="main__text--heading">Your contributions were awesome!</div>
             <div class="main__text--paragraph">Hey {name}, we all here at OpenMRS loved your contributions. We are really grateful that you took out time to contribute and help us develop a great Open Source Community. Without participant like you, we wouldn't have grown this far and the whole Open Source Community wouldn't have been so enriched. We hope you keep your contribution awesomeness coming in :)
             </div>
+            <div class="main__text--contributions">You have successfully made {number of contributions}</div>
             <div class="main__text--certificate">You can collect your digital certificate by clicking on the button below</div>
             <a href="#" class="btn">Download Now</a>
             <div class="main__text--regards">Best Wishes from OpenMRS</div>
