--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     <footer>
         <ul class="footer-links">
             <li class="footer-link">
-                <a href="https://openmrs.org/">OpenMRS</a>
+                <a href="https://openmrs.org/" target="blank">OpenMRS</a>
             </li>
             <li class="footer-link">
-                <a href="https://talk.openmrs.org/">Forum</a>
+                <a href="https://talk.openmrs.org/" target="blank">Forum</a>
             </li>
             <li class="footer-link">
-                <a href="https://wiki.openmrs.org/display/IRC/Home">Chatroom</a>
+                <a href="https://wiki.openmrs.org/display/IRC/Home" target="blank">Chatroom</a>
             </li>
         </ul>
     </footer>
