--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main>
         <div class="main__text">
-            <div class="main__text--heading">Your contributions were awesome!</div>
+            <div class="main__text--heading">Your contributions are awesome! Keep them coming</div>
             <div class="main__text--paragraph">Hey {name}, we all here at OpenMRS loved your contributions. We are really grateful that you took out time to contribute and help us develop a great Open Source Community. Without participant like you, we wouldn't have grown this far and the whole Open Source Community wouldn't have been so enriched. We hope you keep your contribution awesomeness coming in :)
             </div>
             <div class="main__text--contributions">You have successfully made {number of contributions}</div>
